# IChooseYou

./: .gitignore  LICENSE  Makefile  README.md  cython_build.py  package-lock.json  package.json  requirements.txt  serverless.yml  setup.cfg
.github/workflows/: test.yml
env/: template.env
hooks/: pre-commit
scripts/: connection.py
scripts/deployment/: deploy.sh
scripts/integration/: fix_weight_list_sum.py
scripts/migrations/: 2020_07_04_add_strategy.py  2022_04_21_add_only_users_in_pick_list.py
server/: app.py  config.py  main.py  utils.py
server/blueprint/: decorators.py  slack_api.py  slack_api_validator.py  slack_webhook.py  slack_webhook_validator.py
server/blueprint/authentication/: blueprint.py  service.py
server/blueprint/chart/: blueprint.py  helper.py  service.py
server/blueprint/event/: action.py  blueprint.py  helper.py  mapping.py  service.py  type.py
server/blueprint/interactivity/: action.py  blueprint.py  helper.py  mapping.py  service.py
server/blueprint/interactivity_old/: action.py  helper.py  service.py
server/blueprint/slash_command/: action.py  blueprint.py  helper.py  mapping.py  schema.py  service.py
server/blueprint/slash_command_old/: blueprint.py  (+2 more)
server/command/: __init__.py  args.py  base_command.py  create.py  custom.py  delete.py  help.py  update.py  utils.py  validator.py
server/orm/: __init__.py  channel.py  command.py  slack_bot_token.py
server/slack/: __init__.py  message_formatting.py  message_status.py  request.py  utils.py  validator.py
server/tests/: helper.py  test_app.py  test_fixture.py
(+161 files in other folders)
