[metadata]
name = i-choose-you
version = 0.0.1
license_file = LICENSE
description = Slack app to easily and randomly select items
long_description = file: README.md
long_description_content_type = text/markdown
author = Etienne Turc
author_email = etienne.turc@gmail.com
url = https://github.com/EtienneTurc/IChooseYou
keywords = slack, slash command, picker
license = MIT

[options]
python_requires = >=3.9
install_requires =
    Flask>=1.1.2
    pymodm>=0.4.3
    slack_sdk>=3.4.0
    marshmallow>=3.10.0


[options.extras_require]
dev =
# Quality
    flake8
    isort>=5.0.0
# Testing tools
    pytest>=6.1.1

[flake8]
max-line-length = 90
string-quote=single

[isort]
line_length = 90

